[gd_scene load_steps=16 format=3 uid="uid://c4t080anv7fgf"]

[ext_resource type="Script" path="res://Scenes/GUI.gd" id="1_gvndy"]
[ext_resource type="Texture2D" uid="uid://t7u331pyvy35" path="res://Res/toxic.png" id="2_v8ev3"]
[ext_resource type="Texture2D" uid="uid://corahp8hkc1w1" path="res://Res/toxic full.png" id="3_26wkm"]
[ext_resource type="FontFile" uid="uid://c7fb77pn6jjic" path="res://Res/m5x7.ttf" id="4_vi6kt"]
[ext_resource type="Texture2D" uid="uid://c0wp44i4lxkrh" path="res://Res/hp null.png" id="5_terus"]
[ext_resource type="Texture2D" uid="uid://dc1ry2khill2v" path="res://Res/hp full.png" id="6_mscnc"]
[ext_resource type="Texture2D" uid="uid://ck0igiwyl5jtk" path="res://Res/icon.svg" id="7_iti5u"]
[ext_resource type="Texture2D" uid="uid://b76e4fwgu11ff" path="res://Res/char_gg.png" id="7_r5u6n"]
[ext_resource type="Texture2D" uid="uid://bhssoo11ytyhx" path="res://Res/frame.png" id="8_0g1im"]
[ext_resource type="Texture2D" uid="uid://h34qnp3atlsh" path="res://Res/clock.png" id="9_dtwy2"]
[ext_resource type="Texture2D" uid="uid://c4arsg6udp0w1" path="res://Res/effects/skill frame.png" id="10_vnwai"]
[ext_resource type="Texture2D" uid="uid://jr7n0gl7beng" path="res://Res/frame2.png" id="12_o7dig"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53x4l"]
atlas = ExtResource("7_r5u6n")
region = Rect2(239.5, 0, 21, 21)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sn7y"]
bg_color = Color(0.447059, 0.494118, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_gt6kp"]
Panel/styles/panel = SubResource("StyleBoxFlat_3sn7y")

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_gvndy")

[node name="ToxicBar" type="TextureProgressBar" parent="."]
offset_left = 117.0
offset_top = 52.0
offset_right = 288.0
offset_bottom = 93.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_v8ev3")
texture_progress = ExtResource("3_26wkm")

[node name="Label" type="Label" parent="ToxicBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -12.0
offset_right = 70.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.662745)
theme_override_fonts/font = ExtResource("4_vi6kt")
theme_override_font_sizes/font_size = 16
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPress" type="TextureRect" parent="ToxicBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("12_o7dig")
expand_mode = 1

[node name="Label" type="Label" parent="ToxicBar/ButtonPress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="."]
offset_left = 114.0
offset_top = 20.475
offset_right = 373.0
offset_bottom = 68.475
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("5_terus")
texture_progress = ExtResource("6_mscnc")

[node name="Label" type="Label" parent="HPBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -12.0
offset_right = 70.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.65098)
theme_override_fonts/font = ExtResource("4_vi6kt")
theme_override_font_sizes/font_size = 20
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeroImage" type="TextureRect" parent="."]
offset_left = 48.0
offset_top = 37.0
offset_right = 118.0
offset_bottom = 107.0
texture = SubResource("AtlasTexture_53x4l")
expand_mode = 1
stretch_mode = 5

[node name="HeroImageRect" type="TextureRect" parent="."]
offset_left = 33.0
offset_top = 18.0
offset_right = 135.0
offset_bottom = 126.0
texture = ExtResource("8_0g1im")
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 31.0
offset_right = -53.0
offset_bottom = 96.0
grow_horizontal = 2
texture = ExtResource("9_dtwy2")
stretch_mode = 5

[node name="WaveText" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 1.0
offset_right = 288.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_vi6kt")
theme_override_font_sizes/font_size = 48
text = "Wave: 3 (0)"
vertical_alignment = 1

[node name="WaveText2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 31.0
offset_right = 117.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_vi6kt")
theme_override_font_sizes/font_size = 32
text = "12:33"
vertical_alignment = 1

[node name="CounterField" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_top = 37.0
offset_right = -56.0
offset_bottom = 76.0
grow_horizontal = 0
theme = SubResource("Theme_gt6kp")

[node name="Label" type="Label" parent="CounterField"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_vi6kt")
theme_override_font_sizes/font_size = 32
text = "999999 pts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buffs" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -181.0
offset_right = 373.0
offset_bottom = -130.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Buffs"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 318.0
offset_bottom = 21.0
grow_vertical = 2

[node name="Skill" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -124.0
offset_right = 282.0
offset_bottom = -50.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Skill"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="TextureRect" parent="Skill/HBoxContainer"]
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
texture = ExtResource("10_vnwai")
stretch_mode = 5

[node name="Texture" type="TextureRect" parent="Skill/HBoxContainer/1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("7_iti5u")
expand_mode = 1
stretch_mode = 5

[node name="2" type="TextureRect" parent="Skill/HBoxContainer"]
modulate = Color(1, 1, 1, 0.5)
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
texture = ExtResource("10_vnwai")
stretch_mode = 5

[node name="Texture" type="TextureRect" parent="Skill/HBoxContainer/2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("7_iti5u")
expand_mode = 1
stretch_mode = 5

[node name="3" type="TextureRect" parent="Skill/HBoxContainer"]
modulate = Color(1, 1, 1, 0.25)
custom_minimum_size = Vector2(74, 0)
layout_mode = 2
texture = ExtResource("10_vnwai")
stretch_mode = 5

[node name="Texture" type="TextureRect" parent="Skill/HBoxContainer/3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("7_iti5u")
expand_mode = 1
stretch_mode = 5

[node name="ButtonPress" type="TextureRect" parent="Skill"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -14.0
offset_right = -5.0
offset_bottom = 14.0
grow_vertical = 2
texture = ExtResource("12_o7dig")
expand_mode = 1

[node name="Label" type="Label" parent="Skill/ButtonPress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPress" type="TextureRect" parent="."]
offset_left = 132.0
offset_top = 90.0
offset_right = 152.0
offset_bottom = 110.0
texture = ExtResource("12_o7dig")
expand_mode = 1

[node name="Label" type="Label" parent="ButtonPress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "I"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ButtonPress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Skill menu"
vertical_alignment = 1
